siron-activate-main 2/deployment/kubernetes/infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: licensing-service-deployment
  labels:
    app: licensing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: licensing-service
  template:
    metadata:
      labels:
        app: licensing-service
    spec:
      containers:
        - name: licensing-service
          imagePullPolicy: Always
          image: 028952730777.dkr.ecr.eu-west-1.amazonaws.com/siron-activate/license-service:0.7.0
          ports:
            - containerPort: 8080
              name: http
