siron-activate-main 2/deployment/kubernetes/infra/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-licensing-deployment
  labels:
    app: fe-licensing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-licensing
  template:
    metadata:
      labels:
        app: fe-licensing
    spec:
      containers:
        - name: fe-licensing
          imagePullPolicy: Always
          image: 028952730777.dkr.ecr.eu-west-1.amazonaws.com/siron-activate/frontend:0.5.0
          ports:
            - containerPort: 3000
              name: fe-http
