siron-activate-main 2/deployment/kubernetes/infra/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: licensing-service
spec:
  selector:
    app: licensing-service
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  type: ClusterIP
