siron-activate-main 2/deployment/kubernetes/infra/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-licensing-service
spec:
  selector:
    app: fe-licensing
  ports:
    - protocol: TCP
      name: fe-http
      port: 80
      targetPort: fe-http
  type: ClusterIP
